# Monitor

./: .gitignore  CLAUDE.md  CMakeCachem.txt  CMakeLists.txt  FINAL_TEST_REPORT.md  REBUILD_TEST_REPORT.md  main.cpp  mainwindow.cpp  mainwindow.h  monitor-app-specification.md  run_all_tests.sh  test_logger_debug.cpp  test_parser_simple.cpp
.claude/agents/: core-architecture-expert.md  cpp-parser-developer.md  integration-deployment-manager.md  packet-processor.md  performance-optimizer.md  qt6-ui-developer.md  test-automation-engineer.md
docs/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE_5_COMPLETED.md  Phase12_Completion_Report.md  ROADMAP.md  ROADMAP_DONE.md
optimizations/: optimized_cmake_flags.cmake  optimized_memory_pool.h  simd_packet_processor.h
src/concurrent/: mpsc_ring_buffer.h  spsc_ring_buffer.h
src/core/: application.cpp  application.h
src/events/: event.h  event_dispatcher.cpp  event_dispatcher.h
src/logging/: logger.cpp  logger.h
src/memory/: memory_pool.cpp  memory_pool.h
src/messaging/: message.cpp  message.h  message_bus.cpp  message_bus.h  message_channel.cpp  message_channel.h
src/network/config/: network_config.cpp  network_config.h
src/network/sources/: tcp_source.cpp  tcp_source.h  udp_source.cpp  udp_source.h
src/network/ui/: network_config_dialog.cpp  network_config_dialog.h
src/offline/sources/: file_indexer.cpp  file_indexer.h  file_source.cpp  file_source.h
src/packet/: packet_manager.cpp  packet_manager.h
src/packet/core/: packet.cpp  packet.h  packet_buffer.h  packet_factory.cpp  packet_factory.h  packet_header.h
src/packet/processing/: data_transformer.h  field_extractor.h  field_extractor_mock.cpp  field_extractor_mock.h  packet_processor.h  statistics_calculator.h
src/packet/routing/: packet_dispatcher.h  packet_router.h  subscription_manager.h  subscription_manager_mock.cpp  subscription_manager_mock.h
src/packet/sources/: memory_source.h  packet_source.h  simulation_source.cpp  simulation_source.h  test_packet_structures.h
src/parser/ast/: ast_builder.cpp  ast_builder.h  ast_nodes.cpp  ast_nodes.h  ast_visitor.h
src/parser/layout/: alignment_rules.h  bitfield_handler.h  layout_calculator.cpp  layout_calculator.h
src/parser/lexer/: preprocessor.cpp  preprocessor.h  token_types.cpp  token_types.h  tokenizer.cpp  tokenizer.h
src/parser/manager/: structure_cache.h  structure_manager.cpp  structure_manager.h
src/parser/parser/: struct_parser.cpp  struct_parser.h
src/parser/serialization/: json_deserializer.h  json_mock.h  json_serializer.h
src/profiling/: profiler.cpp  profiler.h
src/threading/: thread_manager.cpp  thread_manager.h  thread_pool.cpp  thread_pool.h  thread_worker.cpp  thread_worker.h
src/ui/managers/: settings_manager.cpp  settings_manager.h  tab_manager.cpp  tab_manager.h  window_manager.cpp  window_manager.h
src/ui/widgets/: base_widget.cpp  base_widget.h  display_widget.cpp  display_widget.h  grid_logger_widget.cpp  grid_logger_widget.h  grid_widget.cpp  grid_widget.h
src/ui/widgets/charts/: bar_chart_widget.cpp  bar_chart_widget.h  chart_3d_widget.cpp  chart_3d_widget.h  chart_common.cpp  chart_common.h  chart_widget.cpp  chart_widget.h  line_chart_widget.cpp  line_chart_widget.h  pie_chart_widget.cpp  pie_chart_widget.h
src/ui/windows/: add_struct_window.cpp  add_struct_window.h  performance_dashboard.cpp  performance_dashboard.h  struct_window.cpp  struct_window.h
tests/integration/: CMakeLists.txt  INTEGRATION_TESTS_SUMMARY.md  test_framework_integration.cpp  test_framework_integration_minimal.cpp  test_framework_integration_simple.cpp  test_framework_simple.cpp  test_integration_debug.cpp  test_network_integration.cpp  test_network_integration_simple.cpp  test_offline_integration.cpp  test_offline_integration_simple.cpp  test_packet_pipeline.cpp  test_system_integration.cpp  test_ui_integration.cpp
tests/performance/: test_framework_performance.cpp  test_framework_performance_simple.cpp  test_phase9_performance.cpp  test_phase9_performance_simple.cpp
tests/unit/: test_application.cpp  test_event_dispatcher.cpp  test_logger.cpp  test_memory_pool.cpp  test_packet_core.cpp  test_packet_integration.cpp  test_packet_processing.cpp  test_packet_routing.cpp  test_packet_sources.cpp  test_phase9_simple.cpp  test_profiler.cpp
tests/unit/concurrent/: test_mpsc_ring_buffer.cpp  test_mpsc_simple.cpp  test_spsc_ring_buffer.cpp
tests/unit/integration/: test_qt3d_integration.cpp  test_qt3d_integration_simple.cpp
tests/unit/messaging/: test_message.cpp  test_message_channel.cpp
tests/unit/network/: test_network_config.cpp  test_tcp_source.cpp  test_udp_source.cpp
tests/unit/offline/: test_file_indexer.cpp  test_file_source.cpp
tests/unit/packet/core/: test_packet.cpp  test_packet_buffer.cpp  test_packet_factory.cpp  test_packet_header.cpp
tests/unit/packet/processing/: test_data_transformer.cpp
tests/unit/packet/routing/: test_packet_dispatcher.cpp  test_packet_router.cpp  test_subscription_manager.cpp
tests/unit/packet/sources/: test_packet_source.cpp  test_simulation_source.cpp
tests/unit/parser/: test_ast_nodes.cpp  test_ast_nodes_simple.cpp  test_layout_calculator.cpp  test_phase2_minimal.cpp  test_struct_parser.cpp  test_structure_manager.cpp  test_token_types.cpp
tests/unit/performance/: test_performance_monitoring.cpp  test_performance_monitoring_simple.cpp
tests/unit/threading/: test_thread_manager.cpp  test_thread_pool.cpp  test_thread_pool_simple.cpp  test_thread_worker.cpp
tests/unit/ui/: test_main_window.cpp  test_settings_manager.cpp  test_settings_manager_simple.cpp  test_struct_window.cpp  test_tab_manager.cpp  test_ui_integration.cpp  test_window_manager.cpp
tests/unit/ui/widgets/: test_base_widget.cpp  test_display_widget.cpp  test_grid_logger_widget.cpp  test_grid_widget.cpp  test_widget_integration.cpp
tests/unit/ui/widgets/charts/: test_chart_3d_widget.cpp  test_chart_3d_widget_minimal.cpp  (+5 more)
tests/unit/ui/windows/: test_performance_dashboard.cpp  test_performance_dashboard_minimal.cpp  test_performance_dashboard_simple.cpp
